<resources>
    <string name="app_name">Bankai</string>
    <string name="details">Details</string>
    <string name="characters">Characters</string>
    <string name="quotes">Quotes</string>
    <string name="average">Average: %s</string>
    <string name="synopsis">High school student Ichigo Kurosaki, who has the ability to see ghosts, gains soul reaper powers from Rukia Kuchiki and sets out to save the world from \"Hollows\".</string>
    <string name="series_details">Series details</string>
    <string name="more_info">More info</string>
    <string name="duration">Duration</string>
    <string name="episodes">%s episodes</string>
    <string name="episode_length">Episode length</string>
    <string name="genres">Genres</string>
    <string name="rating">Rating</string>
    <string name="aired">Aired</string>
    <string name="producers">Producers</string>
    <string name="licensors">Licensors</string>
    <string name="source">Source</string>
    <string name="search">Search</string>
    <string name="quotation_mark">\"</string>
    <string name="no_data_found">No data found</string>
</resources>