<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.rafael.bankai.ui.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_homeFragment_to_charactersListFragment"
            app:destination="@id/charactersListFragment" />
        <action
            android:id="@+id/action_homeFragment_to_quotesFragment"
            app:destination="@id/quotesFragment" />
        <action
            android:id="@+id/action_homeFragment_to_infoFragment"
            app:destination="@id/infoFragment" />
    </fragment>
    <fragment
        android:id="@+id/infoFragment"
        android:name="com.rafael.bankai.ui.InfoFragment"
        android:label="@string/details"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/charactersListFragment"
        android:name="com.rafael.bankai.ui.CharactersListFragment"
        android:label="@string/characters"
        tools:layout="@layout/fragment_characters_list"/>
    <fragment
        android:id="@+id/quotesFragment"
        android:name="com.rafael.bankai.ui.QuotesFragment"
        android:label="@string/quotes"
        tools:layout="@layout/fragment_quotes" />
</navigation>